Fix failed test in AddressBookParserTest